--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "antd": "^5.17.4",
+    "axios": "^1.7.2",
     "consola": "^3.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.3.0",
