--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "@mui/material": "^5.15.19",
     "antd": "^5.17.4",
     "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "consola": "^3.2.3",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "ws": "^8.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
@@ -37,7 +43,8 @@
     "stylelint-config-standard": "^36.0.0",
     "stylelint-order": "^6.0.4",
     "stylelint-scss": "^6.3.0",
-    "typescript": "^5.2.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2",
     "vite": "^5.2.0",
     "vite-plugin-style-import": "^2.0.0"
   }
