--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "consola": "^3.2.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reflect-metadata": "^0.2.2",
     "styled-components": "^6.1.11",
-    "ws": "^8.17.1"
+    "typeorm": "^0.3.20",
+    "ws": "^8.17.1",
+    "wx-js-sdk": "^0.0.7",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
