--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
-    "antd": "^5.17.4",
+    "antd": "^5.19.4",
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "consola": "^3.2.3",
@@ -39,12 +40,15 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "install": "^0.13.0",
     "marked": "^13.0.2",
     "npm": "^10.8.1",
+    "postcss": "^8.4.40",
+    "sass": "^1.77.8",
     "stylelint": "^16.6.1",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-recommended-scss": "^14.0.0",
@@ -52,6 +56,8 @@
     "stylelint-config-standard": "^36.0.0",
     "stylelint-order": "^6.0.4",
     "stylelint-scss": "^6.3.0",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2",
     "vite": "^5.2.0",
