--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "highlight.js": "^11.10.0",
+    "katex": "^0.16.11",
+    "mermaid": "^10.9.1",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,6 +36,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/katex": "^0.16.7",
     "@types/marked": "^6.0.0",
     "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
@@ -46,7 +50,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "install": "^0.13.0",
-    "marked": "^13.0.2",
+    "marked": "^13.0.3",
     "npm": "^10.8.1",
     "postcss": "^8.4.40",
     "sass": "^1.77.8",
