--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/express": "^4.17.21",
     "@types/katex": "^0.16.7",
     "@types/marked": "^6.0.0",
